:lipstick: Correct highlight size on mobile

--- a/styles/text-styles.styl
+++ b/styles/text-styles.styl
@@ -25,7 +25,7 @@ text-highlight()
   font-size: pxToRem(25)
   line-height: (33 / 25)
   +mobile()
-    font-size: pxToRem(19)
+    font-size: pxToRem(18)
     line-height: 1
 
 text-header()
